VAN-19069 VAN-19075 high-contrast in home page: resolve conflict with itp-contrast

--- a/vtr-ui/src/app/components/modal/modal-wifi-security-location-notice/modal-wifi-security-location-notice.component.scss
+++ b/vtr-ui/src/app/components/modal/modal-wifi-security-location-notice/modal-wifi-security-location-notice.component.scss
@@ -55,7 +55,7 @@
 		color: $blueFill;
 		font-size: 1.5rem;
 		font-weight: $weight_bold;
-		margin: 0.5rem;
+		margin-left: 0.5rem;
 		padding: 1.2rem 0 0.5rem;
 		height: 3.8rem;
 		border-radius: 0;
