--- a/vtr-ui/src/app/components/widgets/widget-legion-edge/widget-legion-edge.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-legion-edge/widget-legion-edge.component.scss
@@ -180,8 +180,8 @@
 								right: 6rem;
 								.icon {
 									text-align: center;
-									font-size: 2.2rem;
-									color: $gaming_grey_lightest;
+									font-size: 2rem;
+									color: $white60;
 									line-height: 4rem;
 									position: relative;
 									&::after {
@@ -190,7 +190,7 @@
 										height: 4rem;
 										width: 4rem;
 										border-radius: 4rem;
-										background: $white5;
+										background: $white10;
 										transition: all 0.3s ease-in;
 										right: 0;
 										opacity: 0;
