--- a/vtr-ui/src/app/components/widgets/widget-lighting/widget-lighting.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-lighting/widget-lighting.component.scss
@@ -275,7 +275,7 @@
 				&:hover {
 					color: $white100;					
 					.icon{
-						background:$white5;
+						background:$white10;
 					}
 				}
 				.icon {
